--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,13 +95,40 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+
 a {
+  
+  font-size: 18px;
+  text-decoration-style: wavy ;
   color: inherit;
-  text-decoration: none;
+  text-decoration-color: palegreen;
+
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+
+
+p {
+  font-size: 18px;
+  line-height: 25px;
+}
+
+h1 {
+  text-transform: capitalize;
+}
+
+h3 {
+  text-transform: capitalize;
+
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+hr {
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
